@@ -1,0 +1,4 @@
+-- This is a comment
+#  This is another comment
+print("passed # comment")
+
